# prelegal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  catalog.json  docker-compose.yml
.claude/: settings.local.json
backend/: pyproject.toml
backend/app/: auth.py  chat.py  database.py  documents.py  main.py  models.py
backend/tests/: test_database.py  test_documents_api.py
frontend/: html2pdf.d.ts  jest.config.js  next.config.ts  package.json  playwright.config.ts
frontend/__mocks__/: html2pdf.js.js
frontend/__tests__/: page.test.tsx
frontend/__tests__/e2e/: nda.spec.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ChatPanel.tsx  ClerkClientProvider.tsx  FieldListPreview.tsx  NdaPreview.tsx
frontend/app/documents/[slug]/: DocumentChat.tsx  page.tsx
frontend/app/history/: page.tsx
frontend/app/lib/: api.ts  catalog.ts
frontend/app/sign-in/: page.tsx
frontend/app/sign-up/: page.tsx
frontend/app/types/: document.ts  nda.ts
scripts/: start-linux.sh  start-windows.ps1  stop-linux.sh  stop-windows.ps1
templates/: DPA.md  LICENSE.txt
